--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@
     box-sizing: border-box;
 }
 
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #fffaff;
     font-family: "Inter", sans-serif;
-
 }
+
+
 
 .navbar-parent .navbar,
 .hero-intro,
@@ -18,6 +24,20 @@ body {
 .contact,
 footer {
     width: 1200px;
+}
+
+.navbar-parent {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.menu-btn {
+    display: none;
+}
+
+.navbar-right-mobile-version {
+    display: none;
 }
 
 .about,
@@ -136,4 +156,22 @@ footer {
     width: 700px;
     border-radius: 20px;
     margin-top: 20px;
+}
+
+.email-section form input,
+textarea {
+    width: 500px;
+    height: 60px;
+    color: white;
+    font-size: 20px;
+    margin-top: 20px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    padding: 10px;
+    padding-left: 20px;
+}
+
+textarea {
+    height: 200px;
 }
